# ocpp-charge-point-simulator

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  config-tss.toml  config.toml.example
app/: Cargo.toml
app/src/: cli.rs  main.rs  simulator.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  shared_data.rs
crates/cp/: Cargo.toml
crates/cp/src/: config.rs  core.rs  dynamic.rs  idle.rs  lib.rs  session.rs  utils.rs
crates/ocpp/: Cargo.toml
crates/ocpp/src/: generator.rs  handler.rs  lib.rs  message_generator.rs  messsage_handler.rs  mock_data.rs  msg_generator.rs  msg_handler.rs  types.rs
crates/ocpp/src/v1_6/: generator.rs  handler.rs  message_generator.rs  message_handler.rs  msg_generator.rs  msg_handler.rs  types.rs
crates/ocpp/src/v2_0_1/: generator.rs  handler.rs  message_generator.rs  message_handler.rs  msg_generator.rs  msg_handler.rs  types.rs
crates/ocpp/src/v2_1/: generator.rs  handler.rs  message_generator.rs  message_handler.rs  mod.rs  msg_generator.rs  msg_handler.rs  types.rs
crates/simulator/: Cargo.toml
src/: charger.rs  config.rs  env.rs  main.rs  message.rs  message_generator.rs  ocpp.rs  simulator.rs  ws_client.rs
src/cp/: core.rs  mod.rs
src/ocpp/: message_generator.rs  messsage_handler.rs  mod.rs  types.rs
src/ocpp/v1_6/: message_generator.rs  message_handler.rs  messages.rs  mod.rs  simulator.rs  types.rs
src/ocpp/v2_0_1/: message_generator.rs  mod.rs  types.rs
src/ocpp/v2_1/: message_generator.rs  types.rs
src/v1_6/: message.rs  message_generator.rs  mod.rs  types.rs
src/v2_0_1/: message.rs  types.rs
