[workspace]
resolver = "3"
members = [
  "app",
  "crates/ocpp",
  "crates/cp",
  "crates/common"
]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
async-trait = "0.1.88"
tokio = { version = "1.45.0", features = ["full"] }
rand = "0.9.1"
tracing = "0.1.41"
colored = "3.0.0"
futures-util = "0.3.31"
