[workspace]
resolver = "3"
members = [
  "app",
  "crates/ocpp",
  "crates/cp",
  "crates/common"
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
async-trait = "0.1.89"
tokio = { version = "1.50.0", features = ["full"] }
rand = "0.9.2"
tracing = "0.1.44"
colored = "3.1.1"
futures-util = "0.3.32"
