[package]
name = "ocpp-charge-point-simulator"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "ocpp-charge-point-simulator"
path = "src/main.rs"

[dependencies]
common = { path = "../crates/common" }
cp = { path = "../crates/cp" }

tracing-subscriber = "0.3.19"
tracing = "0.1.41"
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["full"] }
futures-util = "0.3.31"
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
clap = { version = "4.5.53", features = ["derive"] }
