[package]
name = "ocpp-charge-point-simulator"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "ocpp-charge-point-simulator"
path = "src/main.rs"

[dependencies]
common = { path = "../crates/common" }
cp = { path = "../crates/cp" }

tracing-subscriber = "0.3.19"
clap = { version = "4.5.53", features = ["derive"] }

tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
colored = { workspace = true }
futures-util = { workspace = true }
