[package]
name = "cp"
version = "0.0.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
ocpp = { path = "../ocpp" }

url = "2.5.4"
rand = "0.9.1"
futures = "0.3.31"
http = "1.3.1"
futures-util = "0.3.31"
colored = "3.0.0"
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
tracing = "0.1.41"
async-trait = "0.1.89"

[features]
default = ["ocpp1_6"]

ocpp1_6 = []
ocpp2_0_1 = []
ocpp2_1 = []

