[package]
name = "cp"
version = "0.0.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
ocpp = { path = "../ocpp" }

url = "2.5.8"
futures = "0.3.32"
http = "1.4.0"
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
async-trait = "0.1.89"

anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
colored = { workspace = true }
futures-util = { workspace = true }

[features]
default = ["ocpp1_6"]

ocpp1_6 = []
ocpp2_0_1 = []
ocpp2_1 = []

