[package]
name = "ocpp"
version = "0.0.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rust-ocpp = { version = "3.0.1", features = ["v2_0_1", "v1_6"] }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
anyhow = "1.0.98"
async-trait = "0.1.88"
rand = "0.9.1"

[features]
default = ["ocpp1_6"]

ocpp1_6 = []
ocpp2_0_1 = []
ocpp2_1 = []
