[package]
name = "ocpp"
version = "0.0.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rust-ocpp = { version = "3.0.1", features = ["v2_0_1", "v1_6"] }
chrono = "0.4.41"

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[features]
default = ["ocpp1_6"]

ocpp1_6 = []
ocpp2_0_1 = []
ocpp2_1 = []
